    Cant override users current project with HTTP header in "Universe"
    Cant create directory storage pool
    Cant use shells other than bash
    Instance names are sometimes invalid when deploying deployment (#379)
    Delete host (#365)
    Node holding onto client sockets that will be closed (#417)
    Image type icon in images sidebar on LXD 3 host

API Changes
    Removed `memoryLimit` from CreateVirtualMachineController in favour of config param (#419)
    Image description when searching images now contains html, the plain description is now kept in the key origDescription
    projectGraphData became projectsUsageGraphData when fetching the general dashboard
    stats key was removed fetching the general dashboard
    Drop alias parameter from all controllers
    Add currentProject key when outputting host as JSON
    Don't load / return server "resources" key unless loading server overview
    Don't load / return clustersAndHosts when loading dashboard

0.13.0 - 18/07/2020

Added
    Setting for storing timezone (#371)
    Support for copying instances between projects (#375)
    Optionally copying profiles when copying instance
    Show image variants when searching images from remotes (#380)
    Support managing instance providers & their types (#395)
    Toggle admin status (#394)
    Toggle login status (#400)

Changed
    Store all dates in UTC (#370)
    Display dates in local browser time (#370)
    Run cron jobs at time specified by timezone setting (#372)

Fixed
    Enforcing backup retention limit
    Typo in the reset admin password docs (#410)
    Hosts that dont support projects break project analytics (#404)

Breaking API Changes
    Change response of GetInstanceTypes api

0.12.0 - 15/04/2020

Changed
    Instance's will now be deleted after a migration
    Site title based on user input or default of "LXD Mosaic" (#239)

Added
    Tooltips to buttons in the navigation bar (#342)
    Cron job to gather project analytics (#314)