@@ -29,6 +29,25 @@ class FetchAllowedProjects
         return $do->fetchAll(\PDO::FETCH_GROUP|\PDO::FETCH_COLUMN, 1);
     }
 
+    public function fetchForUserHost(int $userId, int $hostId)
+    {
+        $sql = "SELECT
+                    `UAP_Project`
+                FROM
+                    `User_Allowed_Projects`
+                WHERE
+                    `UAP_User_ID` = :userId
+                AND
+                    `UAP_Host_ID` = :hostId
+                ";
+        $do = $this->database->prepare($sql);
+        $do->execute([
+            ":userId"=>$userId,
+            ":hostId"=>$hostId
+        ]);
+        return $do->fetchAll(\PDO::FETCH_COLUMN, 0);
+    }
+
     public function fetchAllUsersPermissions()
     {
         $sql = "SELECT
