@@ -7,31 +7,41 @@ use dhope0000\LXDClient\Tools\Hosts\GetResources;
 use dhope0000\LXDClient\Objects\Host;
 use dhope0000\LXDClient\Tools\Hosts\HasExtension;
 use dhope0000\LXDClient\Constants\LxdApiExtensions;
+use dhope0000\LXDClient\Model\Users\FetchUserDetails;
 
 class GetHostOverview
 {
     public function __construct(
         GetHostsInstances $getHostsInstances,
         GetResources $getResources,
-        HasExtension $hasExtension
+        HasExtension $hasExtension,
+        FetchUserDetails $fetchUserDetails,
+        FetchAllowedProjects $fetchAllowedProjects
     ) {
         $this->getHostsInstances = $getHostsInstances;
         $this->getResources = $getResources;
         $this->hasExtension = $hasExtension;
+        $this->fetchUserDetails = $fetchUserDetails;
     }
 
-    public function get(Host $host)
+    public function get(int $userId, Host $host)
     {
         $containers = $this->getHostsInstances->getContainers($host);
         $sortedContainers = $this->sortContainersByState($containers);
         $containerStats = $this->calcContainerStats($containers);
         $supportsWarnings = $this->hasExtension->checkWithHost($host, LxdApiExtensions::WARNINGS);
+        $isAdmin = $this->fetchUserDetails->isAdmin($userId);
+        $resources = $this->getResources->getHostExtended($host);
+
+        if (!$isAdmin) {
+            $resources["projects"] = $this->fetchAllowedProjects->fetchForUserHost($userId, $host->getHostId());
+        }
         return [
             "header"=>$host,
             "containers"=>$sortedContainers,
             "containerStats"=>$containerStats,
-            "resources"=>$this->getResources->getHostExtended($host),
             "supportsWarnings"=>$supportsWarnings
+            "resources"=>$resources,
         ];
     }
 
